test-expected/large/monitoring/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: monitoring
    foo.com/duversion: 2.2.2-20190920.1568984896700
    foo.com/version: 2.2.2
  labels:
    app.kubernetes.io/name: monitoring
    helm.sh/chart: monitoring-2.2.2
  name: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: monitoring
  type: ClusterIP
